src/objects/CD_Item_Cost_Details__c.object
<CustomObject>
    <fields>
        <fullName>Avoid_Duplicate_Records__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Avoid Duplicate Records</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <label>Award</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CD_Item_categories__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CD Item categories</label>
        <referenceTo>CD_Item_Categories__c</referenceTo>
        <relationshipLabel>CD Item Cost Details</relationshipLabel>
        <relationshipName>CD_Item_Cost_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Assy_Name__c</fullName>
        <label>Cost Assy Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Category_IOD__c</fullName>
        <formula>Cost_Category__r.Name</formula>
        <label>Cost Category IOD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cost Category</label>
        <referenceTo>CD_Cost_Category__c</referenceTo>
        <relationshipLabel>CD Item Cost Details</relationshipLabel>
        <relationshipName>CD_Item_Cost_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Type__c</fullName>
        <label>Cost Type</label>
        <picklist>
            <picklistValues>
                <fullName>LOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Should Be</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ExternalKey__c</fullName>
        <formula>TEXT(Cost_Type__c)&amp;&quot;-&quot;&amp;Item_Number_IOD__c&amp;&quot;-&quot;&amp;Supplier_Number_IOD__c&amp;&quot;-&quot;&amp;Cost_Category__r.Name&amp;&quot;-&quot;&amp;TEXT(Quarter__c)&amp;&quot;-&quot;&amp;TEXT(Year__c)&amp;&quot;-&quot;&amp;TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExternalKey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Cost_ID__c</fullName>
        <displayFormat>ITM_CST-{00000000}</displayFormat>
        <externalId>true</externalId>
        <label>Item Cost ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Item_Number_IOD__c</fullName>
        <formula>IF( NOT( ISBLANK(CD_Item_categories__c) ) , CD_Item_categories__r.Item_Number_IOC__c, Item_Number__r.Name)</formula>
        <label>Item Number IOD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Number</label>
        <referenceTo>CD_Items__c</referenceTo>
        <relationshipLabel>CD Item Cost Details</relationshipLabel>
        <relationshipName>CD_Item_Cost_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastModified__c</fullName>
        <formula>$User.FirstName + $User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SupplierName__c</fullName>
        <formula>Supplier_del__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SupplierName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Number_IOD__c</fullName>
        <formula>Supplier_del__r.Oracle_Customer_Number__c</formula>
        <label>Supplier Number IOD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CD Item Cost Details</relationshipLabel>
        <relationshipName>CD_Item_Cost_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USD_Price__c</fullName>
        <label>USD Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USD_WeightedAverage__c</fullName>
        <formula>USD_Price__c * Award__c/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>USD WeightedAverage</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WeightedAverage__c</fullName>
        <formula>Price__c * Award__c/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WeightedAverage</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CD Item Cost Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CD Item Cost Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CD Item Cost Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>